Fri Apr 16 2004  Joe Allen <jhallen@world.std.com>
	* b.c, bw.c, rc.c, rc.h, tw.c, types.h, utf8.c:

	Fixed bug where '-syntax' on command line had
	no effect.

	Now if terminal is UTF-8, the default file type
	is assumed to be UTF-8.

Thu Apr 15 2004  Joe Allen <jhallen@world.std.com>
	* utf8.c:

	Added preprocessor directives to utf8.c to check
	for locale support.  Needs more work: should check
	for iconv() support.

	Fix bug which happened when no locale env vars set.

Thu Apr 15 2004  Joe Allen <jhallen@world.std.com>
	* Makefile.am, configure.ac, main.c, scrn.c, uedit.c,
	ufile.c, utf8.c, utf8.h:

	First attempt at character set conversion iconv().
	Now the file's coding can be different from the terminal's
	coding.  Needs error checking...

	Also, applied secure linux patch from RedHat.

Thu Apr 15 2004  Joe Allen <jhallen@world.std.com>
	* bw.c, help.c, main.c, menu.c, rc.c, scrn.c, scrn.h,
	syntax.c, syntax.h, uedit.c, w.c:

	Fix syntax definition file loader so that you don't
	get seg faults when you refer to a state which doesn't
	exist.

	Fix outatr() to work with non-UTF-8 character sets again.
	Need to start thinking about iconv().

	Mess with option strings to make ^T look nicer.

	Got rid of yellow selection bar from ^T.

Wed Apr 14 2004  Joe Allen <jhallen@world.std.com>
	* b.c b.h macro.c main.c rc.c uedit.c uerror.c uformat.c utag.c
	utils.c utils.h:

	Fix many edit fuctions for UTF-8.  Now we use
	iswalnum() when in UTF-8 mode.  Paragraph format
	works.

	Search is still broken.

Tue Apr 13 2004  Joe Allen <jhallen@world.std.com>
	* bw.c, syntax.c, syntax.h, syntax/php.jsf.in,
	syntax/c.jsf.in:

	Added '-NNN' syntax to .jsf files.  Allows you
	to specify number of lines back to start parsing
	when we don't have the syntax highlighting state.

Tue Apr 13 2004  Joe Allen <jhallen@world.std.com>

	Moved syntax file to syntax/ subdirectory.  They
	still don't get installed in a subdirectory :-(

Tue Apr 13 2004  Joe Allen <jhallen@world.std.com>